--- a/dom/sass/style.sass
+++ b/dom/sass/style.sass
@@ -1171,8 +1171,8 @@ body
     width: 100%
     height: auto
     object-fit: cover
-    padding-bottom: 30%
-    background-image: url(../img/map.jpg)
+    // padding-bottom: 30%
+    // background-image: url(../img/map.jpg)
     background-size: cover
     background-position: center
     background-repeat: no-repeat
