--- a/verter_app/sass/media.sass
+++ b/verter_app/sass/media.sass
@@ -70,6 +70,8 @@ $main_yellow: #faf406
 
     .message
         padding-bottom: 130px
+        &__button
+            padding: 30px 40px
         &__title
             margin: 60px 0px 30px
             &::before
