--- a/verter_app/sass/style.sass
+++ b/verter_app/sass/style.sass
@@ -399,10 +399,11 @@ $main_yellow: #faf406
             font-weight: bold
             text-align: center
     &__button
-        font-size: 33px
+        @include adaptiv-font(33, 14)
         font-weight: bold
         text-decoration: none
         text-transform: uppercase
+        text-align: center
         padding: 40px 56px
         background-color: $main_yellow
         border-radius: 20px
