--- a/verter_app/sass/style.sass
+++ b/verter_app/sass/style.sass
@@ -406,6 +406,7 @@ $main_yellow: #faf406
         text-align: center
         padding: 40px 56px
         background-color: $main_yellow
+        color: $black
         border-radius: 20px
         margin-top: 50px
     &__data
