--- a/business/sass/style.sass
+++ b/business/sass/style.sass
@@ -9,6 +9,10 @@ $main_grey: #E8E8E8
     font-family: $font
     transition: all .2s ease-in 0s
 
+html
+    overflow-x: hidden
+
+
 body
     width: 100%
     min-height: 100vh
@@ -218,6 +222,7 @@ body
         width: 100%
         display: flex
         justify-content: space-between
+        z-index: 5
     &__divide
         margin-top: 15px
         list-style-type: none
@@ -229,28 +234,86 @@ body
         list-style-type: none
         display: inline-block
         text-align: center
-        a
-            color: #000
-            line-height: 19px
-            font-weight: 800
-            text-transform: uppercase
-            text-decoration: none
-            font-size: 13px
+        position: relative
+        &_container
             &::after
                 content: ''
-                display: block
-                width: 100%
-                height: 2px
-                left: 0
-                transform-origin: left
-                transform: scaleX(0)
-                background-color: #000
-                transition: all .3s ease-in-out 0s
-            &:hover::after
-                transform-origin: right
-                right: 0
-                transform: scaleX(1)
-                
+                display: inline-block
+                height: 10px
+                width: 10px
+                margin-bottom: 3px
+                margin-left: 5px
+                background-image: url(../img/arrow_down.svg)
+                background-size: 20px 20px
+                background-repeat: no-repeat
+                background-position: center
+            &:hover
+                cursor: default
+        &:hover > .nav__inner
+            visibility: visible
+            opacity: 1
+            transform: translate(0, -10px)
+
+    &__link
+        color: #000
+        line-height: 19px
+        font-weight: 800
+        text-transform: uppercase
+        text-decoration: none
+        font-size: 13px
+        &::after
+            content: ''
+            display: block
+            width: 100%
+            height: 2px
+            left: 0
+            transform-origin: left
+            transform: scaleX(0)
+            background-color: #000
+            transition: all .3s ease-in-out 0s
+        &:hover::after
+            transform-origin: right
+            right: 0
+            transform: scaleX(1)
+    &__inner
+        position: absolute
+        visibility: hidden
+        opacity: 0
+        text-align: left
+        top: 100%
+        left: 0
+        width: 250px
+        background-color: #ffffff
+        box-shadow: 0 0 10px 3px rgba(0, 0, 0, .2)
+        transform: translate(0, -40px)
+        z-index: 5
+        padding: 10px 0px 0px 0px
+        .nav__item
+            text-align: left
+            padding: 0px 10px
+            width: 100%
+            &:first-child
+                .nav__link
+                    display: inline-block
+                    padding-bottom: 10px
+        .nav__link
+            font-weight: 500
+            font-size: 12px
+            &::after
+                height: 1px
+        .nav__item + .nav__item
+            border-top: 1px solid #414141
+            .nav__link
+                padding-top: 10px
+                padding-bottom: 10px
+                display: inline-block
+        &.active
+            visibility: visible
+            opacity: 1
+            transform: translate(0, -20px)
+    .swiper-pagination
+        z-index: 3
+
 .main-header, .purchise-header
     min-height: 120px
     margin-bottom: 60px
@@ -826,10 +889,10 @@ body
 .swiper-pagination1
     span
         margin: 0px 3px
-    
+
 .swiper-pagination-bullet-active
     background-color: #000
-            
+
 .swiper-container
     max-width: 760px
     height: 60px
@@ -837,7 +900,6 @@ body
 
 .swiper-container1, .swiper-container2
     width: 100%
-    overflow: hidden
 
 .button
     display: inline-block
@@ -854,7 +916,7 @@ body
     transition: all .2s ease-in-out 0s
     &:hover
         background-color: #c9c9c9
-        
+
 .aside
     width: 326px
     margin-right: 20px
@@ -1004,7 +1066,7 @@ body
                 i
                     padding-right: 5px
                     transform: scale(1.4) rotate(180deg)
-                    
+
 .footer
     position: relative
     margin: 45px 0px    
@@ -1116,9 +1178,10 @@ body
 
 //
 //
-// Разместить тендер
+// Разместить тендер, регистрация
 //
 //
+
 .main__form
     //max-width: none
     width: 100%
@@ -1127,10 +1190,39 @@ body
 
 .form
     padding: 30px
+
+    input[type="submit"]
+        cursor: pointer
+        &:hover
+            opacity: .9
+
     &__field 
         display: flex
         justify-content: space-between
         margin-bottom: 15px
+
+    &_registration
+        .form
+            &__field
+                flex-direction: column
+                margin-bottom: 20px
+            &__input
+                max-width: none
+                margin-top: 15px
+                & input[type="text"], & input[type="tel"], & input[type="email"], & textarea
+                    font-size: 16px
+                    padding: 5px
+            &__title
+                text-transform: uppercase
+                font-size: 13px
+                &.required
+                    padding-left: 15px
+                    &::before
+                        left: 0px
+                        top: -1px
+            &__submit
+                input
+                    padding: 15px 60px
 
 
     &__title 
@@ -1156,6 +1248,11 @@ body
     &__input
         max-width: 445px
         width: 100%
+        & input[type="text"], & input[type="tel"], & input[type="email"], & textarea
+            width: 100%
+            font-size: 15px
+            padding: 2px
+            border: 1px solid #737373
 
 
     &__input label
@@ -1168,10 +1265,6 @@ body
 
     &__input label
         user-select: none
-
-
-    &__input input[type="text"], &__input input[type="email"], &__input textarea 
-        border: 1px solid #737373
 
 
     &__subtitle 
@@ -1250,11 +1343,7 @@ body
     &__input label>input:checked + span::after
         display: block
 
-
-    &__input input[type="text"], &__input input[type="email"], &__input textarea 
-        width: 100%
-        font-size: 15px
-        padding: 2px
+    
 
     .no-wrap 
         flex-wrap: nowrap !important
@@ -1295,3 +1384,15 @@ body
         font-size: 14px
         background-color: #DFDFDF !important
         cursor: pointer
+
+.text
+    &_italic
+        font-style: italic !important
+    &_bold
+        font-weight: bold !important
+    &_small
+        font-size: 14px !important
+    &_normal
+        font-size: 16px !important
+    &_ttn
+        text-transform: none !important
