--- a/dentko/sass/media.sass
+++ b/dentko/sass/media.sass
@@ -1,3 +1,11 @@
+@media screen and ( min-width: 1160px )
+    .faqs
+        .swiper-wrapper
+            justify-content: space-between
+            padding: 20px
+        .swiper-slide
+            width: auto
+    
 @media screen and ( max-width: 1275px )
     .about
         &__buttons
@@ -55,14 +63,17 @@
             padding-bottom: 10px
 
     .faqs
+        .swiper-container-horizontal>.swiper-pagination-progressbar
+            display: block
         &__themes
-            flex-wrap: wrap
-            justify-content: space-around
             margin: 50px 0px
+            display: flex
+            padding: 20px 25px 40px 25px
+            .swiper-wrapper
+                
         &__theme
-            margin: 5px
-            margin-top: 15px
-            width: 150px
+            max-width: none
+            min-height: 125px
             &-span
                 text-align: center
     
@@ -323,6 +334,21 @@
                 h2.uk-h1
                     margin-bottom: 50px
 
+    .reviews
+        &__slider + &__slider
+            margin: 0
+        .swiper__controls
+            margin-top: 0
+            width: 100%
+        &__slider
+            &_thumbs
+                .gallery-thumbs
+                    display: none
+        &_video
+            .reviews
+                &__sliders
+                    flex-direction: column
+
     .form
         &__body
             padding: 40px 20px
@@ -487,8 +513,8 @@
 
 @media screen and ( max-width: 440px )
     .faqs
-        &__theme
-            width: 120px
+        &__themes
+            padding: 20px 10px
 
     .form
         &__dropdown
@@ -528,8 +554,8 @@
             flex-direction: column
 
     .reviews
-        &__slider
-            // overflow: visible
+        &__sliders
+            padding: 10px
 
     .about
         &__row
