--- a/dentko/sass/style.sass
+++ b/dentko/sass/style.sass
@@ -13,14 +13,12 @@ body
     flex-direction: column
     overflow-x: hidden
     overflow-y: auto
-    &.no-overflow
-        overflow: visible
 
 html
     overflow-x: hidden
 
-.uk-container
-    // overflow-x: hidden
+.no-overflow
+    overflow: visible !important
 
 .green-link
     color: $green
@@ -283,7 +281,8 @@ html
     left: 0
     top: 0
     z-index: 20
-    width: 100%
+    width: 100vw
+    overflow: hidden
     height: 100%
     background-color: $green
     transform: translateY(-100%)
@@ -323,6 +322,8 @@ html
 
 .main
     flex-grow: 1
+    &>*
+        overflow: hidden
 
 .uk-h1
     font-family: 'Geometria', sans-serif
@@ -825,7 +826,7 @@ html
             margin-right: 10px
         &-wrap
             min-width: 250px
-            padding: 10px !important
+            padding: 13px !important
     &__radio
         display: inline-block
         position: absolute
@@ -1514,8 +1515,23 @@ html
 
 .faqs
     padding: 120px 0px
+    .swiper-container-horizontal>.swiper-pagination-progressbar
+        top: auto
+        bottom: -8px
+        max-width: 400px
+        display: none
+        left: 50%
+        transform: translateX(-50%)
+        height: 1px
+        margin: 10px
+        .swiper-pagination-progressbar-fill
+            height: 3px
+            background-color: $green
+            margin-top: -1px
     &__themes
         margin: 50px 0px 120px
+        overflow: hidden
+        position: relative
     &__theme
         padding: 20px
         box-shadow: 0px 0px 30px rgba(21, 36, 45, 0.15)
