--- a/dentko/sass/style.sass
+++ b/dentko/sass/style.sass
@@ -198,6 +198,33 @@ html
     background: $green_gradient
     box-shadow: inset 0px 10px 30px rgba(21, 36, 45, 0.15)
     flex-grow: 0
+    &__link
+        color: #fff
+        display: inline-block
+        position: relative
+        font-weight: 600
+        font-size: 12px
+        line-height: 14px
+        min-height: auto
+        padding: 18px 0px
+        text-decoration: none !important
+        text-transform: uppercase
+        &::after
+            content: ''
+            display: inline-block
+            width: 100%
+            position: absolute
+            height: 4px
+            background-color: #fff
+            opacity: 0
+            bottom: 0
+            left: 0
+        &:focus
+            color: #fff
+        &:hover
+            color: #fff
+            &::after
+                opacity: 1
     .uk-navbar-nav
         width: 100%
         &>li>a
@@ -208,7 +235,6 @@ html
             font-size: 12px
             line-height: 14px
             min-height: auto
-            padding: 0
             padding: 18px 0px
             &::after
                content: ''
@@ -271,7 +297,24 @@ html
                 background: $green_gradient
                 img
                     width: auto
-
+    &__dropdown
+        &-link
+            display: inline-block
+            position: relative
+            &::before
+                content: ''
+                display: inline-block
+                position: absolute
+                right: -8px
+                top: 52%
+                width: 10px
+                height: 10px
+                margin-left: 5px
+                background-image: url(/dentko/img/arrow-h-w.png)
+                background-size: contain
+                background-repeat: no-repeat
+                transform: translate(100%, -50%) rotate(90deg)
+                z-index: 2
     .uk-navbar-dropdown
         overflow: hidden
         padding: 0
@@ -288,11 +331,57 @@ html
     transform: translateY(-100%)
     overflow-y: auto
     padding: 80px 20px
+    &__services
+        margin-top: 30px
+        margin-bottom: 20px
+    &__title
+        font-size: 1.2rem
+        color: #fff
+        font-weight: 600
+    &__inner
+        padding: 0
+        li
+            margin: 0
+            padding: 0
+            list-style-type: none
+    &__accordion
+        font-size: 12px
+        text-transform: uppercase
+        font-weight: 500
+        position: relative
+        display: inline-block
+        overflow: visible
+        &::before
+            width: 1em
+            height: 1em
+            position: absolute
+            float: none
+            right: -20px
+            top: 1px
+            background-image: url(/dentko/img/arrow-h-w.png)
+            transform: rotate(90deg)
+        &, &:hover, &:visited
+            color: #fff
+    
+    .uk-accordion
+        display: flex
+        flex-direction: column
+        align-items: flex-start
+    .uk-open>.uk-accordion-title::before
+        background-image: url(/dentko/img/arrow-h-w.png)
+        transform: rotate(0deg)
+
     &.active
         transform: translateY(0%)
     .nav
         background: none
         box-shadow: none
+        &__link
+            padding: 12px 0px
+            font-weight: 600
+            &::after
+               height: 1px
+               bottom: 3px 
         .uk-navbar-center
             padding: 0
         ul
