--- a/dentko/sass/media.sass
+++ b/dentko/sass/media.sass
@@ -214,7 +214,9 @@
                         transform: translate(80px, -20px)
         &__side + &__side
             margin-top: 50px
-    
+    &__img-wrap_sticky
+        position: relative
+        top: 0
     .gallery
         &__photos
             flex-direction: column
