--- a/dentko/sass/style.sass
+++ b/dentko/sass/style.sass
@@ -153,6 +153,7 @@ html
         &-trigger
             &:hover .header__dropdown-card
                 display: block
+                min-width: 220px
         &-span img
             vertical-align: middle
             height: 20px
