--- a/dentko/sass/media.sass
+++ b/dentko/sass/media.sass
@@ -235,6 +235,7 @@
                 max-width: 80%
 
     .popup
+        overflow-y: auto
         &__wrapper
             overflow-y: auto
             padding: 50px 10px 10px
@@ -633,6 +634,14 @@
                 width: 60vw
             &_gray
                 width: 40vw
+
+    .uk-pagination
+        &>*
+            padding-left: 10px
+        a, .reviews__control, .uk-active>span
+            height: 30px
+            width: 30px
+            line-height: 30px
 
     .footer
         &__schedule
