--- a/cosmetics/sass/style.sass
+++ b/cosmetics/sass/style.sass
@@ -65,14 +65,13 @@ $maxWidth: 1865
             padding: 0px 30px
         &-img
             margin-left: 25px
-        &-text, &-title
-            font-weight: normal
-            font-size: 22px
-            @include adaptiv-font(22, 14)
-            line-height: 24px
         &-title
             @include adaptiv-font(26, 16)
             font-weight: 500
+        &-text
+            font-weight: normal
+            @include adaptiv-font(22, 14)
+            line-height: 24px
         &-btn
             display: inline-block
             text-decoration: none
