--- a/hearth/sass/style.sass
+++ b/hearth/sass/style.sass
@@ -130,7 +130,7 @@ h1, h2, h3, h4, h5
     flex-grow: 0
     padding: 20px 0px
     position: relative
-    z-index: 10
+    z-index: 1000
     &__wrap
         display: flex
         justify-content: space-between
@@ -414,6 +414,30 @@ h1, h2, h3, h4, h5
             background-image: url(../img/icons/tip.png)
             background-size: contain
             background-repeat: no-repeat
+
+.mobile-menu
+    width: 100%
+    height: 100vh
+    overflow-y: auto
+    z-index: 100
+    background-color: #000
+    position: fixed
+    top: 0
+    padding: 117px 20px 10px
+    left: 0
+    transform: translateY(-110%)
+    &.active
+        transform: translateY(0%)
+    &__body
+        padding: 20px 0px 0px
+    &__title
+        font-weight: bold
+        font-size: 28px
+        color: #fff
+    &__subtitle
+        font-weight: bold
+        font-size: 22px
+        color: #fff
 
 .burger
     position: absolute
