--- a/hearth/sass/style.sass
+++ b/hearth/sass/style.sass
@@ -129,8 +129,15 @@ h1, h2, h3, h4, h5
 .header
     flex-grow: 0
     padding: 20px 0px
-    position: relative
+    position: fixed
+    left: 0
+    top: 0
+    width: 100%
     z-index: 1000
+    & + *
+        margin-top: 117px
+    &.active
+        background-color: #000
     &__wrap
         display: flex
         justify-content: space-between
@@ -549,7 +556,7 @@ h1, h2, h3, h4, h5
     padding-top: 0
     &__container
         position: sticky
-        top: 0
+        top: 117px
     &__icon
         height: 45px
     &__items
