--- a/hearth/sass/media.sass
+++ b/hearth/sass/media.sass
@@ -28,6 +28,10 @@
                 top: 50%
                 transform: translate(-50%, -50%)
 
+    .header
+        &__logo
+            display: none
+
     .example
         &__img
             width: 60vw
@@ -52,7 +56,7 @@
             margin: 0
             &:first-of-type
                 margin: 0px 20px
-            &:nth-of-type(2)
+            &:last-child
                 width: auto
         & + *
             margin-top: 117px
@@ -165,6 +169,9 @@
 @media screen and ( max-width: 620px )
 
     .advantage
+        display: flex
+        justify-content: flex-start
+        width: 100%
         &__title
             font-size: 16px
 
@@ -241,6 +248,7 @@
                 font-size: 16px
             &-labels
                 flex-direction: column
+                align-items: flex-start
                 width: auto
         &__category
             &-item
@@ -249,6 +257,43 @@
         &__title
             font-size: 28px
             margin-top: 20px
+
+    .promo
+        &__bg
+            transform: translate(50%, 38%) scale(.7)
+        &__item
+            background-position: -740% -90px
+            background-size: 400px 400px
+        &__title
+            font-size: 24px
+            max-width: 265px
+        &__discount
+            margin-top: 10px
+            font-size: 24px
+            line-height: 24px
+            padding: 4px 10px
+        &__persentage
+            display: inline-block
+            margin-top: 12px
+            font-size: 32px
+            line-height: 26px
+            vertical-align: top
+        &__sticker
+            height: 100px
+            width: 100px
+            top: 5px
+            right: 5px
+            &::before
+                height: 95px
+                width: 95px
+                background-size: contain
+            &::after
+                height: 90px
+                width: 90px
+                background-size: contain
+            span
+                font-size: 34px
+                letter-spacing: -2px
 
     .footer
         padding-top: 20px
@@ -292,8 +337,6 @@
     .footer
         &__copyright
             margin-top: 30px
-            span
-                display: inline-block
         &__questions
             display: none
         &__bottom
@@ -382,6 +425,9 @@
         &__text
             font-size: 14px
             line-height: 18px
+
+    .advantage
+        
 
     .review
         box-shadow: none
